--- a/vilbert_tasks.yml
+++ b/vilbert_tasks.yml
@@ -11,7 +11,7 @@ TASK1:
   val_annotations_jsonpath: ''
   max_seq_length: 23
   max_region_num: 101
-  batch_size: 80
+  batch_size: 4
   eval_batch_size: 1024
   train_split: trainval
   val_split: minval
@@ -219,7 +219,7 @@ TASK12:
   val_split: dev
   lr: 0.00002
   num_epoch: 20
-TASK13: 
+TASK13:
   name: VisualEntailment
   type: VL-tri-classifier
   loss: BCEWithLogitLoss
@@ -337,17 +337,20 @@ TASK19:
   loss: BCEWithLogitLoss
   process: normal
   task_id: 19
-  dataroot: ""
-  features_h5path1: # obj-features
-  features_h5path2: # ocr-features
+  dataroot: datasets/textvqa
+  features_h5path1: "/srv/share/ykant3/vilbert-mt/features/obj/trainval_obj.lmdb" # obj-features (use holder to different splits)
+  features_h5path2: "/srv/share/ykant3/vilbert-mt/features/ocr/trainval_ocr.lmdb" # ocr-features
+#  features_h5path2: "" # ocr-features
   train_annotations_jsonpath: ''
   val_annotations_jsonpath: ''
   max_seq_length: 20
-  max_region_num: 100 # object features
-  max_resnet_num: 150 # grid features
-  max_ocr_num: 50 # ocr tokens
-  batch_size: 80
+  max_obj_num: 101 # object features + avg feature
+  max_resnet_num: 151 # grid features + avg feature
+  max_ocr_num: 50 # ocr tokens + avg feature
+  batch_size: 8
   train_split: train
   val_split: val
   lr: 0.00004
   num_epoch: 30
+  max_region_num: -1 # backward compatibility
+  debug: true
