--- a/debug_vilbert_tasks.yml
+++ b/debug_vilbert_tasks.yml
@@ -347,10 +347,10 @@ TASK19:
   max_obj_num: 101 # object features + avg feature
   max_resnet_num: 151 # grid features + avg feature
   max_ocr_num: 50 # ocr tokens + avg feature
-  batch_size: 80
+  batch_size: 8
   train_split: train
   val_split: val
   lr: 0.00004
   num_epoch: 66
   max_region_num: -1 # backward compatibility
-  debug: false
+  debug: true
