--- a/sweeps/adam-lr-1e4-warm-10|bs-96-32|model-m4c-spatial.yml
+++ b/sweeps/adam-lr-1e4-warm-10|bs-96-32|model-m4c-spatial.yml
@@ -20,7 +20,7 @@ TASK19:
   lr: 0.0001
   num_epoch: 100
   max_region_num: -1 # backward compatibility
-  debug: true
+  debug: false
   grad_clip_mode: all
   max_grad_norm: 0.25
   lr_scheduler: warmup_linear
