--- a/sweeps/adam-lr-1e4-warm-10|bs-96-32|model-m4c.yml
+++ b/sweeps/adam-lr-1e4-warm-10|bs-96-32|model-m4c.yml
@@ -11,7 +11,7 @@ TASK19:
   train_annotations_jsonpath: ''
   val_annotations_jsonpath: ''
   max_seq_length: 20
-  max_obj_num: 101 # object features + avg feature
+  max_obj_num: 100 # object features + avg feature
   max_resnet_num: 151 # grid features + avg feature
   max_ocr_num: 50 # ocr tokens + avg feature
   batch_size: 96
@@ -20,7 +20,7 @@ TASK19:
   lr: 0.0001
   num_epoch: 100
   max_region_num: -1 # backward compatibility
-  debug: false
+  debug: true
   grad_clip_mode: all
   max_grad_norm: 0.25
   lr_scheduler: warmup_linear
