Add Spatial Aux Loss and Bottom Layers

--- a/sweeps/m4c-spatial-mask-1-2-4-layers-6.yml
+++ b/sweeps/m4c-spatial-mask-1-2-4-layers-6.yml
@@ -40,3 +40,6 @@ TASK19:
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: 5k
+  num_hidden_layers: 0
+  num_spatial_layers: 6
+  spatial_type: top
