--- a/sweeps/replicate-model-m4c-5k-dynamic-decode-rd.yml
+++ b/sweeps/replicate-model-m4c-5k-dynamic-decode-rd.yml
@@ -12,7 +12,7 @@ TASK19:
   val_annotations_jsonpath: ''
   max_seq_length: 20
   max_obj_num: 100 # object features + avg feature
-  max_resnet_num: 100 # grid features + avg feature
+  max_resnet_num: 151 # grid features + avg feature
   max_ocr_num: 50 # ocr tokens + avg feature
   batch_size: 96
   train_split: train
@@ -23,16 +23,7 @@ TASK19:
   debug: false
   grad_clip_mode: all
   max_grad_norm: 0.25
-  model_type: m4c_spatial
-  # allowed quadrants to mask are 1,2,4
-  attention_mask_quadrants: [1,2,4]
-#  Quadrants (QUE + OCR and OBJ + DEC)
-#
-#  1 | 2 | 3
-#  ---------
-#  4 | 5 | 6
-#  ---------
-#  7 | 8 | 9
+  model_type: m4c_rd
   lr_scheduler: pythia_warmup_decay
   optim: Adam
   lr_decay_iters: [14000, 19000]
@@ -40,3 +31,4 @@ TASK19:
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: 5k
+  dynamic_sampling: true
