--- a/sweeps/m4c-spatial-bottom-mask-1-2-4.yml
+++ b/sweeps/m4c-spatial-bottom-mask-1-2-4.yml
@@ -35,8 +35,9 @@ TASK19:
 #  7 | 8 | 9
   lr_scheduler: pythia_warmup_decay
   optim: Adam
-  lr_decay_iters: [14000, 19000]
+  lr_decay_iters: [14000, 23000]
   lr_decay: 0.1
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: 5k
+  spatial_type: bottom
