--- a/sweeps/m4c-spatial-mask-1-2-4-implicit-6-large.yml
+++ b/sweeps/m4c-spatial-mask-1-2-4-implicit-6-large.yml
@@ -33,6 +33,8 @@ TASK19:
 #  4 | 5 | 6
 #  ---------
 #  7 | 8 | 9
+  num_implicit_relations: 6
+  hidden_size: 1152
   lr_scheduler: pythia_warmup_decay
   optim: Adam
   lr_decay_iters: [14000, 19000]
