--- a/sweeps/m4c-spatial-mask-1-2-4-layers-3.yml
+++ b/sweeps/m4c-spatial-mask-1-2-4-layers-3.yml
@@ -40,3 +40,6 @@ TASK19:
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: 5k
+  num_hidden_layers: 3
+  num_spatial_layers: 3
+  spatial_type: top
