--- a/sweeps/m4c-spatial-mask-none-aux.yml
+++ b/sweeps/m4c-spatial-mask-none-aux.yml
@@ -1,7 +1,7 @@
 TASK19:
   name: TextVQA
   type: V-logit
-  loss: TextVQALoss
+  loss: TextVQAandSpatialLoss
   process: normal
   task_id: 19
   dataroot: datasets/textvqa
@@ -25,7 +25,7 @@ TASK19:
   max_grad_norm: 0.25
   model_type: m4c_spatial
   # allowed quadrants to mask are 1,2,4
-  attention_mask_quadrants: [1,2,4]
+  attention_mask_quadrants: []
 #  Quadrants (QUE + OCR and OBJ + DEC)
 #
 #  1 | 2 | 3
@@ -40,3 +40,6 @@ TASK19:
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: 5k
+  dynamic_sampling: true
+  aux_spatial_fusion: mul
+  use_aux_heads: true
