--- a/sweeps/m4c-spatial-mask-none-implicit-6-large.yml
+++ b/sweeps/m4c-spatial-mask-none-implicit-6-large.yml
@@ -25,7 +25,7 @@ TASK19:
   max_grad_norm: 0.25
   model_type: m4c_spatial
   # allowed quadrants to mask are 1,2,4
-  attention_mask_quadrants: [1,2,4]
+  attention_mask_quadrants: []
 #  Quadrants (QUE + OCR and OBJ + DEC)
 #
 #  1 | 2 | 3
@@ -33,6 +33,8 @@ TASK19:
 #  4 | 5 | 6
 #  ---------
 #  7 | 8 | 9
+  num_implicit_relations: 6
+  hidden_size: 1152
   lr_scheduler: pythia_warmup_decay
   optim: Adam
   lr_decay_iters: [14000, 19000]
