--- a/sweeps/m4c-spatial-mask-1-2-layers-4.yml
+++ b/sweeps/m4c-spatial-mask-1-2-layers-4.yml
@@ -1,7 +1,7 @@
 TASK19:
   name: TextVQA
   type: V-logit
-  loss: TextVQAandSpatialLoss
+  loss: TextVQALoss
   process: normal
   task_id: 19
   dataroot: datasets/textvqa
@@ -12,7 +12,7 @@ TASK19:
   val_annotations_jsonpath: ''
   max_seq_length: 20
   max_obj_num: 100 # object features + avg feature
-  max_resnet_num: 151 # grid features + avg feature
+  max_resnet_num: 100 # grid features + avg feature
   max_ocr_num: 50 # ocr tokens + avg feature
   batch_size: 96
   train_split: train
@@ -23,7 +23,16 @@ TASK19:
   debug: false
   grad_clip_mode: all
   max_grad_norm: 0.25
-  model_type: m4c
+  model_type: m4c_spatial
+  # allowed quadrants to mask are 1,2,4
+  attention_mask_quadrants: [1,2]
+#  Quadrants (QUE + OCR and OBJ + DEC)
+#
+#  1 | 2 | 3
+#  ---------
+#  4 | 5 | 6
+#  ---------
+#  7 | 8 | 9
   lr_scheduler: pythia_warmup_decay
   optim: Adam
   lr_decay_iters: [14000, 19000]
@@ -31,6 +40,6 @@ TASK19:
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: 5k
-  dynamic_sampling: true
-  aux_spatial_fusion: mul
-  use_aux_heads: true
+  num_hidden_layers: 2
+  num_spatial_layers: 4
+  spatial_type: top
