--- a/sweeps/m4c-spatial-mask-1-2-layers-dist-1.0-aux-step-textvqa-late.yml
+++ b/sweeps/m4c-spatial-mask-1-2-layers-dist-1.0-aux-step-textvqa-late.yml
@@ -14,13 +14,13 @@ TASK19:
   max_obj_num: 100 # object features + avg feature
   max_resnet_num: 100 # grid features + avg feature
   max_ocr_num: 50 # ocr tokens + avg feature
-  batch_size: 4
+  batch_size: 96
   train_split: train
   val_split: val
   lr: 0.0001
   num_epoch: 100
   max_region_num: -1 # backward compatibility
-  debug: true
+  debug: false
   grad_clip_mode: all
   max_grad_norm: 0.25
   model_type: m4c_spatial
@@ -50,4 +50,4 @@ TASK19:
   use_aux_heads: true
   aux_loss_type: step
   aux_loss_end: 5000
-  textvqa_loss_start: 0
+  textvqa_loss_start: 5000
