--- a/sweeps/m4c-mix/m4c-spatial-mask-1-2-layers-normal-2-spatial-2-normal-2.yml
+++ b/sweeps/m4c-mix/m4c-spatial-mask-1-2-layers-normal-2-spatial-2-normal-2.yml
@@ -4,17 +4,12 @@ TASK19:
   loss: TextVQALoss
   process: normal
   task_id: 19
-
-  # TextVQA
   dataroot: datasets/textvqa
   features_h5path1: "/srv/share/ykant3/vilbert-mt/features/obj/trainval_obj.lmdb" # obj-features (use holder to different splits)
   features_h5path2: "/srv/share/ykant3/vilbert-mt/features/ocr/trainval_ocr.lmdb" # ocr-features
-
-  # STVQA
-  stvqa_dataroot: datasets/stvqa
-  stvqa_features_h5path1: "/srv/share/ykant3/scene-text/features/obj/lmdbs/train_task_fixed.lmdb" # object features
-  stvqa_features_h5path2: "/srv/share/ykant3/scene-text/features/ocr/lmdbs/train_task_fixed.lmdb" # ocr features
-
+#  features_h5path2: "" # ocr-features
+  train_annotations_jsonpath: ''
+  val_annotations_jsonpath: ''
   max_seq_length: 20
   max_obj_num: 100 # object features + avg feature
   max_resnet_num: 100 # grid features + avg feature
@@ -31,6 +26,13 @@ TASK19:
   model_type: m4c_spatial
   # allowed quadrants to mask are 1,2,4
   attention_mask_quadrants: [1,2]
+#  Quadrants (QUE + OCR and OBJ + DEC)
+#
+#  1 | 2 | 3
+#  ---------
+#  4 | 5 | 6
+#  ---------
+#  7 | 8 | 9
   lr_scheduler: pythia_warmup_decay
   optim: Adam
   lr_decay_iters: [14000, 19000]
@@ -40,8 +42,8 @@ TASK19:
   vocab_type: 5k_stvqa
   num_hidden_layers: 2
   num_spatial_layers: 4
-  spatial_type: top
-
-  use_datasets: ["stvqa", "textvqa"]
-  val_on: ["textvqa"]
-  step_datasets: [5000, -1]
+  # n for normal
+  # s for spatial
+  # i for implicit
+  layer_type_list: [n, n, s, s, n, n]
+  num_implicit_relations: 6
