--- a/sweeps/m4c-n4-s2/m4c-spatial-mask-none.yml
+++ b/sweeps/m4c-n4-s2/m4c-spatial-mask-none.yml
@@ -25,7 +25,7 @@ TASK19:
   max_grad_norm: 0.25
   model_type: m4c_spatial
   # allowed quadrants to mask are 1,2,4
-  attention_mask_quadrants: [1,2]
+  attention_mask_quadrants: []
 #  Quadrants (QUE + OCR and OBJ + DEC)
 #
 #  1 | 2 | 3
@@ -39,11 +39,4 @@ TASK19:
   lr_decay: 0.1
   warmup_factor: 0.2
   warmup_iters: 1000
-  vocab_type: 5k
-  num_hidden_layers: 2
-  num_spatial_layers: 4
-  # n for normal
-  # s for spatial
-  # i for implicit
-  layer_type_list: [n, n, s, s, n, n]
-  num_implicit_relations: 6
+  layer_type_list: [n, n, n, n, s, s]
