--- a/sweeps/m4c-n2-s4/masks/seeds/m4c-spatial-mask-1-2-layers-4-seed-1.yml
+++ b/sweeps/m4c-n2-s4/masks/seeds/m4c-spatial-mask-1-2-layers-4-seed-1.yml
@@ -43,5 +43,4 @@ TASK19:
   num_hidden_layers: 2
   num_spatial_layers: 4
   spatial_type: top
-  distance_threshold: 1.0
-  heads_type: share3
+  seed: 1
