--- a/sweeps/m4c-mix/seeds/m4c-spatial-mask-1-2-layers-4-share3.yml
+++ b/sweeps/m4c-mix/seeds/m4c-spatial-mask-1-2-layers-4-share3.yml
@@ -44,4 +44,4 @@ TASK19:
   num_spatial_layers: 4
   heads_type: mix
   layer_type_list: [n,n,s,s,s,s]
-  mix_list: [none, none, share3, share3, share3, share3]
+  mix_list: ['none', 'none', 'share3', 'share3', 'share3', 'share3']
