--- a/sweeps/tvqa-val/m4c-spatial-mask-1-2-layers-4-share3-train-ts-val-t.yml
+++ b/sweeps/tvqa-val/m4c-spatial-mask-1-2-layers-4-share3-train-ts-val-t.yml
@@ -31,6 +31,13 @@ TASK19:
   model_type: m4c_spatial
   # allowed quadrants to mask are 1,2,4
   attention_mask_quadrants: [1,2]
+#  Quadrants (QUE + OCR and OBJ + DEC)
+#
+#  1 | 2 | 3
+#  ---------
+#  4 | 5 | 6
+#  ---------
+#  7 | 8 | 9
   lr_scheduler: pythia_warmup_decay
   optim: Adam
   lr_decay_iters: [14000, 19000]
@@ -38,7 +45,10 @@ TASK19:
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: 5k
-  layer_type_list: [n, n, n, n, n, n]
-
-  use_datasets: ["stvqa"]
-  val_on: ["stvqa"]
+  num_hidden_layers: 2
+  num_spatial_layers: 4
+  heads_type: mix
+  layer_type_list: [n,n,s,s,s,s]
+  mix_list: [none, none, share3, share3, share3, share3]
+  use_datasets: ["stvqa", "textvqa"]
+  val_on: ["textvqa"]
