--- a/sweeps/tvqa-val/stvqa-m4c-spatial-mask-1-2-layers-4-step-train-ts-val-t.yml
+++ b/sweeps/tvqa-val/stvqa-m4c-spatial-mask-1-2-layers-4-step-train-ts-val-t.yml
@@ -31,24 +31,17 @@ TASK19:
   model_type: m4c_spatial
   # allowed quadrants to mask are 1,2,4
   attention_mask_quadrants: [1,2]
-#  Quadrants (QUE + OCR and OBJ + DEC)
-#
-#  1 | 2 | 3
-#  ---------
-#  4 | 5 | 6
-#  ---------
-#  7 | 8 | 9
   lr_scheduler: pythia_warmup_decay
   optim: Adam
   lr_decay_iters: [14000, 19000]
   lr_decay: 0.1
   warmup_factor: 0.2
   warmup_iters: 1000
-  vocab_type: 5k_stvqa
+  vocab_type: 5k
   num_hidden_layers: 2
   num_spatial_layers: 4
-  heads_type: mix
-  layer_type_list: [n,n,s,s,s,s]
-  mix_list: [none, none, share3, share3, share3, share3]
+  spatial_type: top
+
   use_datasets: ["stvqa", "textvqa"]
   val_on: ["textvqa"]
+  step_datasets: [5000, -1]
