--- a/sweeps/ocrvqa/ocrvqa-m4c-spatial-mask-1-2-layers-4-share3.yml
+++ b/sweeps/ocrvqa/ocrvqa-m4c-spatial-mask-1-2-layers-4-share3.yml
@@ -4,8 +4,6 @@ TASK19:
   loss: TextVQALoss
   process: normal
   task_id: 19
-
-  # TextVQA
   dataroot: datasets/textvqa
   features_h5path1: "/srv/share/ykant3/vilbert-mt/features/obj/trainval_obj.lmdb" # obj-features (use holder to different splits)
   features_h5path2: "/srv/share/ykant3/vilbert-mt/features/ocr/trainval_ocr.lmdb" # ocr-features
@@ -36,6 +34,13 @@ TASK19:
   model_type: m4c_spatial
   # allowed quadrants to mask are 1,2,4
   attention_mask_quadrants: [1,2]
+#  Quadrants (QUE + OCR and OBJ + DEC)
+#
+#  1 | 2 | 3
+#  ---------
+#  4 | 5 | 6
+#  ---------
+#  7 | 8 | 9
   lr_scheduler: pythia_warmup_decay
   optim: Adam
   lr_decay_iters: [14000, 19000]
@@ -43,8 +48,8 @@ TASK19:
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: ocrvqa
-  layer_type_list: [n, n, n, n, n, n]
-
+  heads_type: mix
+  layer_type_list: [n,n,s,s,s,s]
+  mix_list: [none, none, share3, share3, share3, share3]
   use_datasets: ["ocrvqa"]
   val_on: ["ocrvqa"]
-  metric: STVQA
