[WIP] Gaussian Bias, Added utils

--- a/sweeps/attention-bias/gauss-bias/m4c-spatial-mask-1-2-layers-4-share3-gauss.yml
+++ b/sweeps/attention-bias/gauss-bias/m4c-spatial-mask-1-2-layers-4-share3-gauss.yml
@@ -45,5 +45,6 @@ TASK19:
   layer_type_list: [n, n, s, s, s, s]
   mix_list: [none, none, share3, share3, share3, share3]
   use_gauss_bias: True
-  # 2*std_dev = 3*45/2 (in degrees)
-  gauss_bias_dev: 33.75
+  # how many std_dev == 0.5*range
+  # higher is peakier
+  gauss_bias_dev_factor: 2
