--- a/sweeps/attention-bias/gauss-bias/m4c-spatial-mask-1-2-layers-4-share3-gauss-debug.yml
+++ b/sweeps/attention-bias/gauss-bias/m4c-spatial-mask-1-2-layers-4-share3-gauss-debug.yml
@@ -20,7 +20,7 @@ TASK19:
   lr: 0.0001
   num_epoch: 100
   max_region_num: -1 # backward compatibility
-  debug: false
+  debug: true
   grad_clip_mode: all
   max_grad_norm: 0.25
   model_type: m4c_spatial
