--- a/sweeps/vqa-re/contrastive/unsupervised-sweeps/vqa_task_layers6_simclr_tem_1.yml
+++ b/sweeps/vqa-re/contrastive/unsupervised-sweeps/vqa_task_layers6_simclr_tem_1.yml
@@ -3,7 +3,7 @@ TASK19:
   type: ContrastiveProjection
   loss: NTXentLoss
   loss_params:
-    temperature: 0.1
+    temperature: 1.0
     use_cosine_similarity: True
   process: normal
   task_id: 1
@@ -14,31 +14,42 @@ TASK19:
   val_annotations_jsonpath: ''
   max_seq_length: 23
   max_region_num: 101
-  batch_size: 208
-  eval_batch_size: 1024
   train_split: re_train
   val_split: re_val
-  lr: 0.0003
+  debug: false
+
   # Change at both places num_epochs
   num_epoch: 20
-  debug: False
-  model_type: m4c
+
+  # grad-clipping
   grad_clip_mode: all
+  max_grad_norm: 0.25
+  # weight-decay (doesn't apply on batch-norm and biases)
+  weight_decay: 0.00001
+
+  # optimizer
   optim: Adam
   lr_scheduler: pythia_warmup_decay
-  warmup_iters: 7678
-  lr_decay_iters: [38390, 61424]
+  warmup_iters: 1364 # 2 epochs
+  lr: 0.0003
   warmpu_factors: 0.1
+  lr_decay_iters: [4774, 9548] # 7, 14  epochs
   lr_decay: 0.2
-  max_grad_norm: 0.25
+
+  # model attributes
+  model_type: m4c
   num_hidden_layers: 6
   revqa_eval: false
-  contrastive: simclr
   contrast_out_dim: 512
-  val_batch_size: 64
+  batch_size: 208
+  val_batch_size: 208
   monitor_value: val_loss
+
+  # loss attributes
+  contrastive: simclr
+
   # don't load the optimizer, lr-scheduler states
-  load_state: false
+#  load_state: false
   #  contrastive: better
   #  contrastive_supervised: true/false (use answers to filter negatives)
   #  better_params: [50,50]
