--- a/sweeps/vqa-re/contrastive/supervised-sweeps/vqa_task_layers6_simclr_baseline_with_negs.yml
+++ b/sweeps/vqa-re/contrastive/supervised-sweeps/vqa_task_layers6_simclr_baseline_with_negs.yml
@@ -12,8 +12,8 @@ TASK19:
   max_seq_length: 23
   max_region_num: 101
   batch_size: 196
-  train_split: re_train
-  val_split: re_val
+  train_split: re_train_negs
+  val_split: re_val_negs
   lr: 0.0001
   # Change at both places num_epochs
   num_epoch: 30
@@ -22,8 +22,8 @@ TASK19:
   grad_clip_mode: all
   optim: Adam
   lr_scheduler: pythia_warmup_decay
-  warmup_iters: 1448
-  lr_decay_iters: [5068, 10136]
+  warmup_iters: 3006
+  lr_decay_iters: [10521, 21042]
   warmpu_factors: 0.1
   lr_decay: 0.2
   max_grad_norm: 0.25
