--- a/sweeps/vqa-re/contrastive/supervised-sweeps/vqa_task_layers6_simclr_finetune_lr_scale_1.0_epoch_40_track.yml
+++ b/sweeps/vqa-re/contrastive/supervised-sweeps/vqa_task_layers6_simclr_finetune_lr_scale_1.0_epoch_40_track.yml
@@ -12,34 +12,35 @@ TASK19:
   max_seq_length: 23
   max_region_num: 101
   batch_size: 196
-  train_split: re_train
-  val_split: re_val
+  train_split: re_train_negs
+  val_split: re_val_negs
   lr: 0.0001
   # Change at both places num_epochs
-  num_epoch: 20
+  num_epoch: 40
   debug: False
   model_type: m4c
   grad_clip_mode: all
   optim: Adam
   lr_scheduler: pythia_warmup_decay
-  warmup_iters: 7678
-  lr_decay_iters: [38390, 61424]
+  warmup_iters: 3006
+  lr_decay_iters: [10521, 21042]
   warmpu_factors: 0.1
   lr_decay: 0.2
   max_grad_norm: 0.25
   num_hidden_layers: 6
-  revqa_eval: false
   contrastive: finetune
   contrast_out_dim: 512
   val_batch_size: 196
   monitor_value: val_score
 
   # finetune MMT during training
-  lr_scale_mmt: 0.5
+  lr_scale_mmt: 1.0
 
   # don't load the optimizer, lr-scheduler states
   load_state: false
 
+  # consistency_tracking
+  revqa_eval: true
 
 
   #  contrastive: better
