--- a/sweeps/textcaps/m4c-no-spatial.yml
+++ b/sweeps/textcaps/m4c-no-spatial.yml
@@ -36,16 +36,16 @@ TASK19:
 #  7 | 8 | 9
   lr_scheduler: pythia_warmup_decay
   optim: Adam
-  lr_decay_iters: [6000, 10000]
+  lr_decay_iters: [10000, 11000]
   lr_decay: 0.1
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: textcaps
-  num_hidden_layers: 2
-  num_spatial_layers: 4
+  num_hidden_layers: 6
+  num_spatial_layers: 0
   heads_type: mix
-  layer_type_list: [n,n,s,s,s,s]
-  mix_list: [none, none, share3, share3, share3, share3]
+  layer_type_list: [n,n,n,n,n,n]
+  mix_list: [none, none, none, none, none, none]
   use_datasets: ["textcaps"]
   val_on: ["textcaps"]
   num_workers: 16
