--- a/sweeps/textcaps/m4c-share3-spatial-ld-6k-10k-mask-score.yml
+++ b/sweeps/textcaps/m4c-share3-spatial-ld-6k-10k-mask-score.yml
@@ -11,7 +11,7 @@ TASK19:
   features_h5path1: "/srv/share/ykant3/vilbert-mt/features/obj/trainval_obj.lmdb" # obj-features (use holder to different splits)
   features_h5path2: "/srv/share/ykant3/vilbert-mt/features/ocr/trainval_ocr.lmdb" # ocr-features
 
-  max_seq_length: 1
+  max_seq_length: 2
   max_obj_num: 100 # object features + avg feature
   max_resnet_num: 100 # grid features + avg feature
   max_ocr_num: 50 # ocr tokens + avg feature
@@ -19,7 +19,7 @@ TASK19:
   train_split: train
   val_split: val
   lr: 0.0001
-  num_epoch: 100
+  num_epoch: 14
   max_region_num: -1 # backward compatibility
   debug: false
   grad_clip_mode: all
@@ -36,16 +36,18 @@ TASK19:
 #  7 | 8 | 9
   lr_scheduler: pythia_warmup_decay
   optim: Adam
-  lr_decay_iters: [10000, 11000]
+  lr_decay_iters: [6000, 10000]
   lr_decay: 0.1
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: textcaps
-  num_hidden_layers: 6
-  num_spatial_layers: 0
+  num_hidden_layers: 2
+  num_spatial_layers: 4
   heads_type: mix
-  layer_type_list: [n,n,n,n,n,n]
-  mix_list: [none, none, none, none, none, none]
+  layer_type_list: [n,n,s,s,s,s]
+  mix_list: [none, none, share3, share3, share3, share3]
   use_datasets: ["textcaps"]
   val_on: ["textcaps"]
   num_workers: 16
+  remove_unk_in_pred: false
+  remove_unk_in_scores: true
