--- a/sweeps/textcaps/m4c-no-spatial-ld-6k-10k.yml
+++ b/sweeps/textcaps/m4c-no-spatial-ld-6k-10k.yml
@@ -41,11 +41,11 @@ TASK19:
   warmup_factor: 0.2
   warmup_iters: 1000
   vocab_type: textcaps
-  num_hidden_layers: 2
-  num_spatial_layers: 4
+  num_hidden_layers: 6
+  num_spatial_layers: 0
   heads_type: mix
-  layer_type_list: [n,n,s,s,s,s]
-  mix_list: [none, none, share3, share3, share3, share3]
+  layer_type_list: [n,n,n,n,n,n]
+  mix_list: [none, none, none, none, none, none]
   use_datasets: ["textcaps"]
   val_on: ["textcaps"]
   num_workers: 16
