--- a/sweeps/vqa_spatial_share3_big.yml
+++ b/sweeps/vqa_spatial_share3_big.yml
@@ -18,7 +18,7 @@ TASK19:
   lr: 0.0001
   num_epoch: 30
   debug: False
-  model_type: m4c
+  model_type: m4c_spatial
   grad_clip_mode: all
   optim: Adam
   lr_scheduler: pythia_warmup_decay
@@ -27,4 +27,8 @@ TASK19:
   warmpu_factors: 0.1
   lr_decay: 0.2
   max_grad_norm: 0.25
-  num_hidden_layers: 6
+  num_hidden_layers: 10
+  attention_mask_quadrants: [1,2]
+  layer_type_list: [n,n,n,n,n,n,s,s,s,s]
+  mix_list: [none, none, none, none, none, none, share3, share3, share3, share3]
+  heads_type: mix
