--- a/sweeps/vqa_task_layers6.yml
+++ b/sweeps/vqa_task_layers6.yml
@@ -13,7 +13,7 @@ TASK19:
   max_region_num: 101
   batch_size: 196
   eval_batch_size: 1024
-  train_split: trainval
+  train_split: minval
   val_split: minval
   lr: 0.0001
   num_epoch: 30
