--- a/sweeps/vqa-aug/scl/archive-runs/scl-joint-base-strict-pos-2-th-4-4-pc-grad-module.yml
+++ b/sweeps/vqa-aug/scl/archive-runs/scl-joint-base-strict-pos-2-th-4-4-pc-grad-module.yml
@@ -58,3 +58,6 @@ TASK19:
   val_workers: 16
   train_workers: 16
   scl_coeff: 1.0
+  pcgrad_module : true
+  pcgrad_adjust: true
+  pcgrad_on: ["scl", "ce"]
