--- a/sweeps/vqa-aug/scl/archive-runs/scl-joint-base-strict-pos-2-th-4-4.yml
+++ b/sweeps/vqa-aug/scl/archive-runs/scl-joint-base-strict-pos-2-th-4-4.yml
@@ -14,7 +14,8 @@ TASK19:
   train_split: re_train
   val_split: re_val
   # Change at both places num_epochs
-  num_epoch: 40
+  num_epoch: 20 # changed
+#  num_epoch: 40
 
   # grad-clipping
   grad_clip_mode: all
