--- a/sweeps/release.yml
+++ b/sweeps/release.yml
@@ -25,7 +25,7 @@ val_split: val
 lr: 0.0001
 num_epoch: 100
 max_region_num: -1 # backward compatibility
-debug: true
+debug: false
 grad_clip_mode: all
 max_grad_norm: 0.25
 model_type: m4c_spatial
@@ -47,13 +47,13 @@ vocab_type: 5k
 heads_type: mix
 train_on: ["stvqa", "textvqa"]
 val_on: ["textvqa"]
-num_workers: 0
+num_workers: 16
 needs_spatial: true
 
 M4C:
   obj_drop: 0.1
   ocr_drop: 0.1
-  hidden_size: 768
+  hidden_size: 24
   num_hidden_layers: 4
   num_spatial_layers: 2
   num_spatial_relations: 12
@@ -79,7 +79,7 @@ M4C:
 
 TextBert:
   lr_scale_text_bert: 0.1
-  num_hidden_layers: 3
+  num_hidden_layers: 1
   text_bert_init_from_bert_base: true
   vocab_size: 30522
 
