--- a/sweeps/vqa-aug/scl/joint/scl-joint-base-strict-pos-2-th-4-4-train_aug2t_th0.9-minval-no-lr-scale-only-ce.yml
+++ b/sweeps/vqa-aug/scl/joint/scl-joint-base-strict-pos-2-th-4-4-train_aug2t_th0.9-minval-no-lr-scale-only-ce.yml
@@ -1,6 +1,6 @@
 TASK19:
   name: VQA
-  type: ContrastiveProjection
+  type: VL-classifier-only-ce
   loss: SCLLoss
   process: normal
   task_id: 1
@@ -25,10 +25,10 @@ TASK19:
   # optimizer
   optim: Adam
   lr_scheduler: pythia_warmup_decay
-  warmup_iters: 1364 # 2 epochs
-  lr: 0.0002
+  warmup_iters: 4266 # 2 epochs
+  lr: 0.0001
   warmpu_factors: 0.1
-  lr_decay_iters: [4774, 9548] # 7, 14  epochs
+  lr_decay_iters: [10665, 14931] # 5, 7 epochs
   lr_decay: 0.2
   debug: false
   # model attributes
@@ -50,7 +50,7 @@ TASK19:
   # min. frequency needed to be sampled as a positive
   freq_ans_threshold: 4
   # use CE loss
-  use_ce_loss: true
+  use_ce_loss: false
   # don't use negative sampler for validation
   val_neg_sampler: false
   # turn on revqa eval
