--- a/sweeps/vqa-aug/baseline/sup-baseline-train-minval.yml
+++ b/sweeps/vqa-aug/baseline/sup-baseline-train-minval.yml
@@ -7,7 +7,7 @@ TASK19:
   task_id: 1
   dataroot: datasets/VQA/
   features_h5path1: /srv/testing/ykant3/vqa/COCO_trainval_resnext152_faster_rcnn_genome.lmdb
-  features_h5path2: ''
+  features_h5path2: /srv/testing/ykant3/vqa/COCO_test_resnext152_faster_rcnn_genome.lmdb
   train_annotations_jsonpath: ''
   val_annotations_jsonpath: ''
   max_seq_length: 23
@@ -28,7 +28,7 @@ TASK19:
   lr_decay: 0.2
   max_grad_norm: 0.25
   num_hidden_layers: 6
-  revqa_eval: false
+  revqa_eval: true
   monitor_value: val_score
   train_workers: 16
   val_workers: 16
@@ -37,3 +37,7 @@ TASK19:
   # change w/ batch-size | 1 epoch = 3149 iterations
   warmup_iters: 4266 # 2 epochs
   lr_decay_iters: [10665, 14931] # 5, 7 epochs
+  aug_filter:
+    max_re_per_sample: 4
+    sim_threshold: 0.95
+    sampling: top # top (selects max_re_per_sample samples from top after thresholding), bottom and random
