--- a/sweeps/vqa-aug/scl/joint/scl-joint-base-strict-pos-1-th-4-4-train_aug4t_th0.95-minval-sampler-new-hard-mask_sc20-shuffle-alt-no-re-im-cf-4-fixed-ref-10.yml
+++ b/sweeps/vqa-aug/scl/joint/scl-joint-base-strict-pos-1-th-4-4-train_aug4t_th0.95-minval-sampler-new-hard-mask_sc20-shuffle-alt-no-re-im-cf-4-fixed-ref-10.yml
@@ -6,7 +6,7 @@ TASK19:
   task_id: 1
   dataroot: datasets/VQA/
   features_h5path1: /srv/testing/ykant3/vqa/COCO_trainval_resnext152_faster_rcnn_genome.lmdb
-  features_h5path2: ''
+  features_h5path2: /srv/testing/ykant3/vqa/COCO_test_resnext152_faster_rcnn_genome.lmdb
   train_annotations_jsonpath: ''
   val_annotations_jsonpath: ''
   max_seq_length: 23
