--- a/sweeps/vqa-aug/baseline/sup-baseline-trainval_aug-minval.yml
+++ b/sweeps/vqa-aug/baseline/sup-baseline-trainval_aug-minval.yml
@@ -7,18 +7,18 @@ TASK19:
   task_id: 1
   dataroot: datasets/VQA/
   features_h5path1: /srv/testing/ykant3/vqa/COCO_trainval_resnext152_faster_rcnn_genome.lmdb
-  features_h5path2: ''
+  features_h5path2: /srv/testing/ykant3/vqa/COCO_test_resnext152_faster_rcnn_genome.lmdb
   train_annotations_jsonpath: ''
   val_annotations_jsonpath: ''
   max_seq_length: 23
   max_region_num: 101
-  batch_size: 208
-  val_batch_size: 208
+  batch_size: 210
+  val_batch_size: 210
   train_split: trainval_aug
   val_split: minval
   lr: 0.0001
   # Change at both places num_epochs
-  num_epoch: 20
+  num_epoch: 5
   debug: False
   model_type: m4c
   grad_clip_mode: all
@@ -35,9 +35,9 @@ TASK19:
   use_ce_loss: false
   scl_coeff: -1.0
   # change w/ batch-size | 1 epoch = 3149 iterations
-  warmup_iters: 6298 # 2 epochs
-  lr_decay_iters: [22043, 44086] # 7, 14 epochs
+  warmup_iters: 4266 # 2 epochs
+  lr_decay_iters: [10665, 14931] # 5, 7 epochs
   aug_filter:
     max_re_per_sample: 4
-    sim_threshold: 0.9
-    sampling: random # top (selects max_re_per_sample samples from top after thresholding), bottom and random
+    sim_threshold: 0.95
+    sampling: top # top (selects max_re_per_sample samples from top after thresholding), bottom and random
