--- a/sweeps/vqa-cc/cc-baseline-allowed-18k.yml
+++ b/sweeps/vqa-cc/cc-baseline-allowed-18k.yml
@@ -14,11 +14,11 @@ TASK19:
   max_region_num: 101
   batch_size: 210
   val_batch_size: 210
-  train_split: trainval
+  train_split: train_aug_cc
   val_split: minval
   lr: 0.0001
   # Change at both places num_epochs
-  num_epoch: 20
+  num_epoch: 6
   debug: False
   model_type: m4c
   grad_clip_mode: all
@@ -39,5 +39,6 @@ TASK19:
   lr_decay_iters: [10665, 14931] # 5, 7 epochs
   aug_filter:
     max_re_per_sample: 4
-    sim_threshold: 0.95
+    sim_threshold: 0.8
     sampling: top # top (selects max_re_per_sample samples from top after thresholding), bottom and random
+  allowed_only: True
