--- a/sweeps/vqa-cc/cc-baseline.yml
+++ b/sweeps/vqa-cc/cc-baseline.yml
@@ -1,7 +1,8 @@
 TASK19:
+  # default-keys
   name: VQA
-  type: ContrastiveProjection
-  loss: SCLLoss
+  type: VL-classifier
+  loss: BCEWithLogitLoss
   process: normal
   task_id: 1
   dataroot: datasets/VQA/
@@ -11,64 +12,32 @@ TASK19:
   val_annotations_jsonpath: ''
   max_seq_length: 23
   max_region_num: 101
-  train_split: train_aug_cc
-  val_split: minval
-  # Change at both places num_epochs
-  num_epoch: 5
-
-  # grad-clipping
-  grad_clip_mode: all
-  max_grad_norm: 0.25
-  # weight-decay (doesn't apply on batch-norm and biases)
-  weight_decay: 0.00001
-
-  # optimizer
-  optim: Adam
-  lr_scheduler: pythia_warmup_decay
-  warmup_iters: 4266 # 2 epochs
-  lr: 0.0002
-  warmpu_factors: 0.1
-  lr_decay_iters: [10665, 14931] # 5, 7 epochs
-  lr_decay: 0.2
-  debug: false
-  # model attributes
-  model_type: m4c
-  num_hidden_layers: 6
-  contrast_out_dim: 128
   batch_size: 210
   val_batch_size: 210
-  monitor_value: val_score
-
-  # loss attributes
-  contrastive: better
-  neg_replace: true
-  use_gt_answer: false
-  # num of positives to add
-  num_positives: 1
-  # min. frequency needed to be used for sampling positives
-  bin_ans_threshold: 4
-  # min. frequency needed to be sampled as a positive
-  freq_ans_threshold: 4
-  # use CE loss
-  use_ce_loss: true
-  # don't use negative sampler for validation
-  val_neg_sampler: false
-  # turn on revqa eval
+  train_split: train_aug_cc
+  val_split: minval
+  lr: 0.0001
+  # Change at both places num_epochs
+  num_epoch: 7
+  debug: False
+  model_type: m4c
+  grad_clip_mode: all
+  optim: Adam
+  lr_scheduler: pythia_warmup_decay
+  warmpu_factors: 0.1
+  lr_decay: 0.2
+  max_grad_norm: 0.25
+  num_hidden_layers: 6
   revqa_eval: true
-  val_workers: 16
+  monitor_value: val_score
   train_workers: 16
-  scl_coeff: 1.0
+  val_workers: 16
+  use_ce_loss: false
+  scl_coeff: -1.0
+  # change w/ batch-size | 1 epoch = 3149 iterations
+  warmup_iters: 4266 # 2 epochs
+  lr_decay_iters: [10665, 14931] # 5, 7 epochs
   aug_filter:
     max_re_per_sample: 4
     sim_threshold: 0.8
     sampling: top # top (selects max_re_per_sample samples from top after thresholding), bottom and random
-  sampler_type: new
-  init_batch_size: 10 # 41 + 2x41
-  neg_type_weights: [0.25, 0.25, 0.5]
-  neg_question_thresh: 210
-  scl_mask_thresh: -1
-  scl_mask_rescale_factor: 20
-  scl_random_sampler: false
-  alt_train: true
-  alt_re: false
-  ce_freq: 4
