--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,4 @@
-save-old
-
-# Byte-compiled / optimized / DLL files
+# Cache and Visual Studio files
 __pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Code Editors
 .vscode
-.idea
 
-# Code linters
-.mypy_cache
-
-# Datasets and preprocessed files
-data/
-save/
-logs/
-results/
-
-# Checkpoints directory
-checkpoints/
-
-# IPython Notebook
-.ipynb_checkpoints
-
-# virtualenv
-venv/
-ENV/
-save
-jlogs/
-wandb
-dtrain.py
-data-release
