--- a/configs/concat-train.yml
+++ b/configs/concat-train.yml
@@ -35,7 +35,7 @@ test_features_path: data-release/image-features/COCO_test_resnext152_faster_rcnn
 # training and evaluation data
 # revqa: human rephrasings set ,revqa-bt: back-translated rephrasings set
 val_split: [minval, revqa, revqa_bt, val, test]
-train_split: train
+train_split: train_aug
 aug_filter:  # rephrasings filter
   num_rephrasings: 4
   sim_threshold: 0.95
@@ -63,6 +63,7 @@ workers: 16
 revqa_eval: true
 two_norm: false
 freeze_textbert_and_mmt: false
+hard_stop: 25000
 
 # contrastive sampling
 num_positives: 1 # num of positives per sample
@@ -80,5 +81,5 @@ base_temperature: 0.07
 temperature: 0.5
 loss: SCLLoss
 scl_formulation: "normal"
-debug: True
+debug: false
 
